/**
 * Copyright (C) 2009 Scalable Solutions.
 */
 
package se.scalablesolutions.akka.kernel.nio.protobuf;

/*
  Compile with:
  cd ./util-java/src/main/java
  protoc se/scalablesolutions/akka/kernel/nio/protobuf/RemoteProtocol.proto --java_out .
*/

option optimize_for = SPEED;

/*
val message: Array[Byte],
val method: String,
val target: String,
val timeout: Long,
val supervisorUuid: String
val isOneWay: Boolean,
val isActor: Boolean,
val isEscaped: Boolean,
val id: Long,
val messageType: String,
*/
message RemoteRequest {
  required bytes message = 1;
  optional string method = 2;
  required string target = 3;
  required uint64 timeout = 4;
  optional string supervisorUuid = 5;
  required bool isActor = 6;
  required bool isOneWay = 7;
  required bool isEscaped = 8;
  required uint64 id = 9;
  required string messageType = 10;
}

/*
val isSuccessful: Boolean,
val id: Long,
val message: Array[Byte],
val exception: Throwable,
val supervisorUuid: String
val isActor: Boolean,
*/
message RemoteReply {
  required bool isSuccessful = 1;
  required uint64 id = 2;
  optional bytes message = 3;
  optional string exception = 4;
  optional string supervisorUuid = 5;
  optional string messageType = 6;
  required bool isActor = 7;
}